- Fixed bug #54440: libxml extension ignores default context.